Correction de l'alignement des éléments pour une cohérence entre Safari et Chrome

--- a/public/css/composantes/page.css
+++ b/public/css/composantes/page.css
@@ -54,3 +54,7 @@
 .page .page-prompt a {
     font-size: var(--police-std);
 }
+.page {
+   
+    margin: 0;
+}
